version/0.30/_sources/examples/00-fluent/index.rst.txt


.. _sphx_glr_examples_00-fluent:

Simulation Examples
===================
These examples show you how you can use Fluent capabilities from Python to perform
Fluent simulations. This includes geometry import, Fluent's meshing workflows,
setting up and running the solver, and reviewing the results using Fluent's
postprocessing capabilities.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Design of Experiments and Machine Learning model building">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_DOE_ML_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_DOE_ML.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Design of Experiments and Machine Learning model building</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ahmed Body External Aerodynamics Simulation">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_ahmed_body_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_ahmed_body_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ahmed Body External Aerodynamics Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Objective: ==========">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_brake_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_brake.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Automotive Brake Thermal Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Conjugate Heat Transfer">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_conjugate_heat_transfer_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_conjugate_heat_transfer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Conjugate Heat Transfer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the guided workflow for fault-tolerant meshing because it is appropriate for geometries that can have imperfections, such as gaps and leakages.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_exhaust_system_settings_api_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_exhaust_system_settings_api.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fault-tolerant meshing workflow using settings objects</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the guided workflow for watertight geometry meshing because it is appropriate for geometries that can have no imperfections, such as gaps and leakages.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_external_compressible_flow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_external_compressible_flow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling External Compressible Flow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyFluent uses the following loop at each timestep to retrofit the required functionality to Fluent:">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_lunar_lander_thermal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_lunar_lander_thermal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Thermal Model of a Lunar Lander Using the Monte Carlo Radiation Model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses settings objects.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_mixing_elbow_settings_api_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_mixing_elbow_settings_api.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fluent setup and solution using settings objects</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modeling Ablation">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_modeling_ablation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_modeling_ablation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Ablation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the multiphase modeling capability of Ansys Fluent, and will be able to predict the strong cavitation near the orifice after flow separation at a sharp edge.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_modeling_cavitation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_modeling_cavitation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Cavitation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parametric study workflow">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_parametric_static_mixer_1_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_parametric_static_mixer_1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric study workflow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Workflow tasks">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_radiation_headlamp_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_radiation_headlamp.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Radiation in a Headlamp Using the Monte Carlo Method</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modeling Species Transport and Gaseous Combustion">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_species_transport_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_species_transport.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Species Transport and Gaseous Combustion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tyler-Sofrin Compressor Modes Post-Processing">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_tyler_sofrin_modes_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_tyler_sofrin_modes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tyler-Sofrin Compressor Modes Post-Processing</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-fluent/DOE_ML
   /examples/00-fluent/ahmed_body_workflow
   /examples/00-fluent/brake
   /examples/00-fluent/conjugate_heat_transfer
   /examples/00-fluent/exhaust_system_settings_api
   /examples/00-fluent/external_compressible_flow
   /examples/00-fluent/lunar_lander_thermal
   /examples/00-fluent/mixing_elbow_settings_api
   /examples/00-fluent/modeling_ablation
   /examples/00-fluent/modeling_cavitation
   /examples/00-fluent/parametric_static_mixer_1
   /examples/00-fluent/radiation_headlamp
   /examples/00-fluent/species_transport
   /examples/00-fluent/tyler_sofrin_modes

